# project-management-automation

./: .cursorignore  .cursorrules  .exarp_wisdom_seen  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENT_SETUP.md  ALL_PROJECTS_PARALLELIZATION_ANALYSIS.md  ANALYSIS_COMPLETE.md  ANALYSIS_SUMMARY.md  ANY_TYPE_ANALYSIS.md  ATTRIBUTIONS.md  ATTRIBUTION_SUMMARY.md  AUTOMATE_CODELLAMA.md  BREAKING_TEST_FINAL.md  BREAKING_TEST_RESULTS.md  BREAKING_TEST_SUMMARY.md  CACHE_ANALYSIS_FINAL.md  CACHE_ISSUE_ANALYSIS.md  CLEAR_CURSOR_MCP_CACHE.sh  CONSOLIDATED_COPY_RESULTS.md  CONSOLIDATED_TEST_RESULTS.md  CONTEXT_HINTS.md  CONTINUED_ANALYSIS.md  CONVERT_TO_CONTENT_ANALYSIS.md  CONVERT_TO_CONTENT_COMPLETE_ANALYSIS.md  CONVERT_TO_CONTENT_FINDINGS.md  DEBUG_EXECUTION_PATH_ANALYSIS.md  DEPENDENCIES.md  DEVWISDOM_GO_REDUNDANCY_REVIEW.md  DUPLICATE_ANALYSIS.md  DUPLICATE_FIX.md  DUPLICATE_FIX_COMPLETE.md  DUPLICATE_MCP_CHECK.md  DUPLICATE_TASKS_CONSOLIDATION_PLAN.md  EXAMPLES_INDEX.md  EXAMPLE_TOOL_TEST_RESULTS.md  FASTMCP_COMPARISON.md  FASTMCP_EXAMPLES_PARAMETER_ANALYSIS.md  FASTMCP_PYTHON_REQUIREMENT_HISTORY.md  (+171 more)
.cursor/: README.md  automa_file_watcher.py  automa_patterns.json  commands.json  docs.json  ib_box_spread_full_universal.code-workspace  mcp.json  mcp.json.backup  mcp.json.backup.20251221_020948  mcp.json.template
.mcpower/: app_uid
.todo2/: commits.json  handoffs.json  state.todo2.backup.json  state.todo2.json
ansible/: README.md  cursor-mcp-sync.yml  inventory.example  setup-mcp-servers.yml
chrome_profile_notebooklm/: .com.google.Chrome.2c3QjP  Account Web Data  (+51 more)
(+11497 files in other folders)
