[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project-management-automation-mcp"
version = "0.1.5"
description = "MCP server for project management automation tools"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
]

[project.entry-points."mcp.servers"]
project-management-automation = "project_management_automation.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[project.scripts]
project-management-automation = "project_management_automation.server:main"

[tool.setuptools.packages.find]
include = ["project_management_automation*"]
